# agents

./: .env.example  .gitignore  README.md  pyproject.toml
.github/actions/trigger-builder-agent/: action.yml
.github/workflows/: ai-queue-sync.yml  claude.yml  fix-pr-lint.yml  on-demand-agent.yml  orchestrator-check.yml
agents/: __init__.py  base_agent.py  builder_agent.py  codex_auth.py  issue_analyzer.py  prompt_builder.py  task_orchestrator.py
agents/prompts/checklists/: builder-quality.yaml
agents/prompts/personas/: builder.yaml  tester.yaml
agents/prompts/workflows/: builder-orchestration.yaml
cli/: __init__.py  main.py
config/: __init__.py  settings.py
tests/: __init__.py
tools/: __init__.py  claude_agent.py  code_agent.py  codex_runner.py  deepseek_agent.py  git_tools.py  github_project.py  github_tools.py  llm_providers.py  messenger.py  metrics.py  semantic_label_parser.py  story_generator.py  widgetbook_tools.py
